# scrooge-bot

./: .environment.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yml  main.py  pyproject.toml
.github/workflows/: docker.yml
app/: bot.py  decryptor.py  settings.py  telegram_client.py
app/banks_clients/: base.py  tbank.py  utils.py
