[project]
name = 'scrooge-bot'
version = '0.1.0'
description = 'Scrooge bot'
readme = 'README.md'
requires-python = '>=3.13'
dependencies = [
    'playwright==1.55.0',
    'requests==2.32.5',
    'pydantic-settings==2.12.0',
    'cryptography==46.0.3',
    'pre-commit==4.5.0',
]

[tool.setuptools]
packages = []

[tool.ruff]
target-version = 'py313'
line-length = 120
fix = true

[tool.ruff.lint]  # https://docs.astral.sh/ruff/rules/
ignore = ['RUF001', 'ANN401']
select = [
    'E',    # pycodestyle errors
    'ERA',  # eradicate errors
    'F',    # pyflakes
    'I',    # isort
    'N',    # pep8-naming
    'A',    # flake8-builtins
    'ANN',  # flake8-annotations
    'B',    # flake8-bugbear
    'B',    # flake8-bugbear
    'PIE',  # flake8-pie
    'RET',  # flake8-return
    'SIM',  # flake8-simplify
    'TC',   # flake8-type-checking
    'C4',   # flake8-comprehensions
    'PERF', # perflint
    'RUF',  # ruff
    'UP',   # pyupgrade
]